from validation import *

models_validation = Validator()

class FlightAttendant(Employee):
    def __init__(self):
        super().__init__(self)
