from data_layer import DLAPI
from models import *


class LLAirplanes:
    def __init__(self):
        dl_api = DLAPI()

    def validate_airplane(self):
        pass

    def get_all_airplanes(self):
        pass
