from data_layer import DLAPI
from models import *


class LLEmployees:
    def __init__(self):
        dl_api = DLAPI()

    def validate_employee(self):
        pass

    def get_employee(self, employee_ID):
        pass

    def get_all_employees(self):
        pass

    def filter_all_employees_by_date(self):
        pass

    def filter_all_employees_by_title(self):
        pass

    def filter_pilots_by_airplane_type(self):
        pass

    def sort_pilots_bu_airplane_type(self):
        pass

    def create_work_scedule(self):
        pass
