from data_layer import DLAPI
from models import *


class LLVoyages:
    def __init__(self):
        dl_api = DLAPI()

    def validate_voyage(self):
        pass

    def get_voyage(self, voyage_ID):
        pass

    def get_all_voyages(self):
        pass

    def filter_all_empty_voyages(self):
        pass

    def filter_all_voyages_by_period(self):
        pass

    def filter_all_voyages_by_destination(self):
        pass

    def duplicate_voyages(self):
        pass

    def repeat_voyage(self):
        pass

    def add_crew(self):
        pass
